Feature (facebook login): Add facebook login

--- a/node/src/views/caminhos.ejs
+++ b/node/src/views/caminhos.ejs
@@ -1,6 +1,7 @@
 <% include partials/head.ejs %>
 <body>
-<% include partials/navbar.ejs %>
+  <% include partials/facebook.ejs %>
+  <% include partials/navbar.ejs %>
 
     <div class="container-fluid">
         <div class="row content">
