--- a/node/src/views/linha.ejs
+++ b/node/src/views/linha.ejs
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<% include partials/navbar.ejs %>
+  <% include partials/facebook.ejs %>
+  <% include partials/navbar.ejs %>
 
     <div class="container-fluid">
         <div class="row content">
