--- a/node/src/views/linhas.ejs
+++ b/node/src/views/linhas.ejs
@@ -1,6 +1,7 @@
 <% include partials/head.ejs %>
 <body>
-<% include partials/navbar.ejs %>
+  <% include partials/facebook.ejs %>
+  <% include partials/navbar.ejs %>
 
     <div class="container-fluid">
         <div class="row content">
