--- a/node/src/views/partials/navbar.ejs
+++ b/node/src/views/partials/navbar.ejs
@@ -1,9 +1,9 @@
 <nav class="navbar navbar-expand bg-dark navbar-dark col-12 col-sm-12 col-md-12 col-lg-12 ">
     <a id = "logo" class="navbar-brand" href="#">BusCarlos</a>
     <div class="navbar-collapse" id="collapsibleNavbar">
-        <ul class="nav navbar-nav flex-row justify-content-between ml-auto">
-            <li class="nav-item">
-                <a id = "login" class="nav-link" href="#">Login</a>
+        <ul class="nav navbar-nav flex-row justify-content-between ml-auto" id="user-itens">
+            <li class="nav-item" id="login-item">
+                <a id = "login" class="nav-link" href="#" onclick="logar()">Login</a>
             </li>
         </ul>
     </div>
