--- a/node/src/views/referencias.ejs
+++ b/node/src/views/referencias.ejs
@@ -1,14 +1,15 @@
 <% include partials/head.ejs %>
 <body>
+  <% include partials/facebook.ejs %>
 	<% include partials/navbar.ejs %>
 
 	<div class="container-fluid">
   		<div class="row content">
 			<%- include partials/sidenav.ejs%>
     	<div class=" container-fluid col-12 col-sm-12 col-md-8 col-lg-9 col-xl-10 text-left">
-		
+
 			<h1 id = "busca" >Busca por Referência</h1>
-			
+
 			<form id="barralinha">
         <div class="row">
           <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12">
@@ -17,7 +18,7 @@
         </div>
       </form>
 
-		<div  id = "tabelareferencias" > 
+		<div  id = "tabelareferencias" >
 			<div class="container">
 
 				<div class="row">
@@ -88,10 +89,10 @@
 					</div>
 					</div>
 					</div>
-		
+
 				</div>
-		
-    
+
+
   		</div>
 		</div>
 	</div>
