--- a/node/src/views/rua.ejs
+++ b/node/src/views/rua.ejs
@@ -9,7 +9,8 @@
 </head>
 <body>
 <body>
-<% include partials/navbar.ejs %>
+  <% include partials/facebook.ejs %>
+  <% include partials/navbar.ejs %>
 
     <div class="container-fluid">
         <div class="row content">
