--- a/node/src/views/referencias.ejs
+++ b/node/src/views/referencias.ejs
@@ -5,7 +5,7 @@
 
 	<div class="container-fluid">
   		<div class="row content">
-			<%- include partials/sidenav.ejs%>
+			<% include partials/sidenav.ejs%>
     	<div class=" container-fluid col-12 col-sm-12 col-md-8 col-lg-9 col-xl-10 text-left">
 
 			<h1 id = "busca" >Busca por Referência</h1>
@@ -22,71 +22,19 @@
 			<div class="container">
 
 				<div class="row">
-				  <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 1.</p>
-					  </div>
-					</div>
-				  </div>
-				  <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 2.</p>
-					  </div>
-					</div>
-				  </div><div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 3.</p>
-					  </div>
-					</div>
-				  </div><div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 1.</p>
-					  </div>
-					</div>
-				  </div><div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 1.</p>
-					  </div>
-					</div>
-				  </div><div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 1.</p>
-					  </div>
-					</div>
-				  </div><div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 1.</p>
-					  </div>
-					</div>
-				  </div><div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 1.</p>
-					  </div>
-					</div>
-				  </div><div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
-					<div class="card mb-4 box-shadow">
-					  <img class="card-img-top" data-src="holder.js/100px225?theme=thumb&amp;bg=55595c&amp;fg=eceeef&amp;text=Thumbnail" alt="Thumbnail [100%x225]" style="height: 225px; width: 100%; display: block;" src="images/img1.jpg" data-holder-rendered="true">
-					  <div class="card-body">
-						<p class="card-text">Usp Campus 1.</p>
-					  </div>
-					</div>
-					</div>
+          <%for(let i = 0; i < rows.length; i++) { %>
+  				  <div class="col-12 col-sm-12 col-md-12 col-lg-6 col-xl-4">
+    					<div class="card mb-4 box-shadow">
+                <a href='/referencias/<%=rows[i].nome%>'>
+    					  <img class="card-img-top" style="height: 225px; width: 100%; display: block;" src="<%=rows[i].foto%>" data-holder-rendered="true">
+    					       <div class="card-body">
+    						<p class="card-text"><%=rows[i].nome%></p>
+    					  </div>
+                </a>
+    					</div>
+  				  </div>
+            <% }%>
+
 					</div>
 					</div>
 
